--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,6 @@
 this is firstline of code
 this is seocd line of
 this is third line of code here we will be back after check out
-this is fourth line of code 
+this is fourth line of code
 5th line of cond
+6th line added
