header tag added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div class="container" >
       <!-- header starts -->
+      <header>
       <nav class="navbar navbar-default navbar-fixed-top" id="header">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -68,6 +69,7 @@
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+      </header>
           <!-- header ends-->
           <div class="container-fluid" id="wrapper">
               <div class="row">
