--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle change-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" style="border-left:1px solid white"> <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                          <li><a href="#">Action</a></li>
-                          <li><a href="#">Another action</a></li>
-                          <li><a href="#">Something else here</a></li>
+                          <li><a href="#">Create Page</a></li>
                           <li role="separator" class="divider"></li>
-                          <li><a href="#">Separated link</a></li>
+                          <li><a href="#">Create Group</a></li>
+                          <li><a href="#">Your Group</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Create Ads</a></li>
+                          <li><a href="#">Advertizing On Facebook</a></li>
+                          <li role="separator" class="divider"></li>
+                          <li><a href="#">Activity Log</a></li>
+                          <li><a href="#">News Feed Preference</a></li>
+                          <li><a href="#">Setting</a></li>
+                          <li><a href="#">Log Out</a></li>
                       </ul>
                     </li>
                   </ul>
